# embfft

./: Cargo.toml  README.md  build.rs
src/: common.rs  cordic.rs  fft.rs  ifft.rs  lib.rs
